<resources>
    <string name="app_name">Bakso Viral Jember Mobile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="buat_biodata_baru">Buat Biodata Baru</string>
    <string name="simpan">Simpan</string>
    <string name="cancel">Cancel</string>
    <string name="namadepan">Nama Depan</string>
    <string name="namabelakang">Nama Belakang</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="email">Email</string>
    <string name="telepon">No. Telepon</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="alamatpengiriman">Alamat Pengiriman</string>
    <string name="title_activity_sidebar_activity">sidebar_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alamat">Alamat</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="jenis">Jenis</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi">deskripsi</string>
    <string name="rp">RP.</string>
    <string name="harga">Harga</string>
    <string name="todo">todo</string>
    <string name="bakso_viral">Bakso Viral</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="bakso_viral_jember">Bakso Viral Jember</string>
    <string name="makanan">Makanan</string>
    <string name="jl_manggis_39_jember">Jl. Manggis 39 - Jember</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string-array name="countries_array">
        <item>Afganistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>America</item>
        <item>Andorra</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antingua and Barbuda</item>
        <item>Argentina</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
    </string-array>
</resources>