<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_tool"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            tools:context=".EditProfile">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:inputType="text"
                android:maxLength="20">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/namadepan"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="10dp"
                android:text="@string/namabelakang"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:inputType="text"
                android:maxLength="20" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="10dp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="10dp"
                android:text="@string/telepon"/>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:maxLength="13"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText4"
                android:layout_below="@+id/editText4"
                android:layout_marginTop="10dp"
                android:text="@string/kecamatan"/>


            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="1dp"
                android:inputType="text"
                android:maxLength="100" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText5"
                android:layout_below="@+id/editText5"
                android:layout_marginTop="10dp"
                android:text="@string/alamat" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="3dp"
                android:inputType="text"
                android:maxLength="100" />

            <Button
                android:id="@+id/button3"
                style="?android:borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_alignLeft="@+id/editText5"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="364dp"
                android:layout_marginBottom="61dp"
                android:drawableLeft="@drawable/icon_done"
                android:text="Save Profile"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button4"
                style="?android:borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@+id/editText5"
                android:layout_alignRight="@+id/editText5"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="357dp"
                android:layout_marginRight="357dp"
                android:layout_marginBottom="61dp"
                android:drawableLeft="@drawable/icon_arrow_back"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </RelativeLayout>
    </LinearLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white">
            <include
                layout="@layout/main_nav_drawer"/>
        </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>