<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".user.LoginActivity">

    <Button
        android:id="@+id/button2"
        style="?android:borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="0dp"
        android:drawableLeft="@drawable/icon_arrow_back"
        android:text="@string/cancel"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="Profile User"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="10dp"
                android:text="@string/telepon"/>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:maxLength="13"
                android:inputType="number"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText5"
                android:layout_below="@+id/editText5"
                android:layout_marginTop="10dp"
                android:text="@string/alamat" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="3dp"
                android:inputType="text"
                android:maxLength="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit Profile"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/button_bg" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>