<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_tool"/>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tablelayoutid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/listTgl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:text="TextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Nama Pembeli"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/listNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="TextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Nomer Telepon"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/listTelp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="TextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Kecamatan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/listKecamatan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="TextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Alamat"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/listAlamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="TextView" />
                    </LinearLayout>
                </LinearLayout>
        </TableLayout>

        <TableLayout
            android:id="@+id/tablelayoutpesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/pesanan"
                android:background="@android:color/white">


                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_produk"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_jenis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/jenis"
                            android:textColor="#505050" />

                        <TextView
                            android:id="@+id/tv_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nama_produk"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:text="@string/rp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_harga"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/harga"
                                android:textColor="@color/black" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </TableRow>
            <TableRow
                android:id="@+id/total"
                android:background="@android:color/white"
                android:padding="10dp"
                android:layout_marginTop="10dp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Total : RP. 00.000"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Kembali"
                    android:textColor="#ffffFF"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableLayout>
    </LinearLayout>
</ScrollView>

    </LinearLayout>
<!--    <RelativeLayout-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        android:background="@color/white">-->
<!--        <include-->
<!--            layout="@layout/main_nav_drawer"/>-->
<!--    </RelativeLayout>-->
</androidx.drawerlayout.widget.DrawerLayout>